2007-12-27 P.G. Richardson <phantom_sf at users.sourceforge.net>

  * data/cdshine.png
  * data/cdshine_main.png
  * data/Makefile.am
  
    Removed reflection shadowing as this is done programmatically.
    No higlighting required on main image to png removed entirely.
    
  * gtkpod.glade
  
    Added colour selection button for CoverArt Display background colour.
    
  * src/display_coverart.c
  * src/display_coverart.h
  * prefs_window.c
  * prefs.c
  
    When a repository contains no tracks, the CoverArt Display background
    returns to a default colour of white.
    The default colour of a "live" CoverArt Display is black but can now be
    changed with a preference option available from the preferences window.
    To be added to the new preference dialog shortly.
    To achieve this and keeps a proper reflection, the reflection shadow is
    added programmatically using a gdkpixbuf created from data.
      
2007-12-27 Matvey Kozhev <sikon at users.sourceforge.net>

	* INSTALL:
	* configure.in:
	  Updated dependency versions (GTK 2.8, indirectly glib 2.8 for libgpod).
	  
	* src/misc.h:
	* src/display.c:
	* src/misc_confirm.c:
	* src/file_itunesdb.c:
	* src/ipod_init.c:
	* src/repository.c:
	* src/file_export.c:
	* src/display_spl.c:
	* src/info.c:
	* src/tools.c:
	* src/prefs_window.c:
	* src/prefsdlg.c:
	* src/display_coverart.c:
	* src/misc_playlist.c:
	* src/file_convert.c:
	* src/fileselection.c:
	* src/confirmation.c:
	* src/display_photo.c:
	* src/details.c:
	* src/display_sorttabs.c:
	* src/help.c:
	* src/misc.c:
	  Patch for cygwin build, by Éric Lassauge:
	  - Added new wrapper function, gtkpod_xml_new, for glade_xml_new.
	  - Added G_MODULE_EXPORT calls to all glade callbacks.
	  - Renamed struct member "stderr" in display_photo.c.

2007-12-26 Matvey Kozhev <sikon at users.sourceforge.net>

	* src/prefsdlg.c:
	* data/gtkpod.glade:
	  New preferences dialog mostly working, except for "advanced" buttons